# submarine

./: .gitignore  README.md  index.html  original_index.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.tsx  DesktopApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: about.rs  auth.rs  cloud.rs  database.rs  main.rs  mirror.rs  models.rs  monitor.rs  ssh_manager.rs  ssh_utils.rs  tunnel.rs
src/components/: AboutPanel.tsx  AddNodePanel.tsx  AuthPage.tsx  CloudPanel.tsx  CmdsPanel.tsx  FilePanel.tsx  LogFooter.tsx  MirrorsPanel.tsx  MonitoringPanel.tsx  NodeGrid.tsx  PasswordField.tsx  ProfileSelectPage.tsx  QuickConnectModal.tsx  SFTPPanel.tsx  SessionView.tsx  SettingsPanel.tsx  SftpWorkspace.tsx  Sidebar.tsx  Sparkline.tsx  TerminalView.tsx  TunnelsPanel.tsx
src/fs/: localProvider.ts  remoteProvider.ts  transfer.ts  types.ts
src/hooks/: useTauriListen.ts  useViewport.ts
src/ui/: ErrorBoundary.tsx  confirm.tsx
tools/: fix-icon.ps1
