[package]
name = "submarine"
version = "0.1.0"
description = "Submarine SSH Client"
authors = ["Sina"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
# Default build is OpenSSL-free so it compiles on any machine without Perl /
# system libcrypto. The trade-off is reduced SSH compatibility: russh's
# default only negotiates Ed25519 / ECDSA-P256 host keys + modern KEX /
# MAC algorithms, so older Linux servers and most shared hosts still using
# RSA host keys won't connect ("No common key algorithm").
default = []
# Turned on by the release workflow (tauri-action `args: ... --features
# full-ssh-algos`) so the shipped binaries can talk to essentially any SSH
# server in production: full RSA host-key family, legacy DH groups, the
# older HMAC-SHA1 family. Pulls in russh's openssl backend plus a vendored
# (statically-linked, built-from-source) libcrypto so the resulting binary
# has no runtime libssl dependency. Cost is a one-time perl + C compiler
# requirement on the build host, which is why we don't make it default —
# developers debugging locally shouldn't need to install Perl.
full-ssh-algos = ["russh/openssl", "russh-keys/openssl", "dep:openssl-sys"]

[dependencies]
tauri = { version = "2.1", features = [] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "backup", "serialize"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
directories = "5.0"
# OpenSSL-backed features (RSA host keys, legacy KEX, full MAC suite) are
# gated behind the `full-ssh-algos` feature so the default `cargo build`
# stays Perl-free for local debugging. See the [features] block above.
russh = "0.40.2"
russh-keys = "0.40.1"
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
ssh-key = { version = "0.6", features = ["alloc", "encryption", "getrandom", "ed25519", "rsa"] }
tokio-socks = "0.5"
async-http-proxy = { version = "1.2", features = ["runtime-tokio"] }
async-trait = "0.1.89"
russh-sftp = "2.1.2"
rfd = "0.14"
open = "5.1"
notify = "6.1.1"
regex = "1.10"
# rustls-tls so we don't drag in OpenSSL on Windows builds. multipart for blob
# uploads; json for typed request/response bodies.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
# Vault v2 compresses the SQLite serialisation with zstd before encrypting.
# Real profiles compress ~50-70% (lots of repeated SQL+JSON structure), so
# both local disk and cloud blobs shrink correspondingly. v1 vaults stay
# readable — we only emit v2 going forward.
zstd = { version = "0.13", default-features = false }
# Zeroize-on-drop wrappers for the master vault key and the decompressed
# SQLite plaintext. Without this, secrets stay in the heap until allocator
# reuse — long enough for a swap file / crash dump to capture them. We
# wrap only the things that survive past one function call; transient
# String/Vec passed as args to argon2/aes-gcm are zeroized internally by
# those crates.
zeroize = { version = "1.8", features = ["zeroize_derive"] }
